# bing-wallpaper-now

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .oxlintrc.json  AGENTS.md  AI_INSTALL.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  README.zh.md  SIGNING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  zh-cn.json
.config/eslint/: .eslintrc.cjs
.config/prettier/: .prettierignore  .prettierrc
.config/quality/: README.md
.config/scripts/: check-rust.sh  coverage-frontend.sh  coverage-rust.sh  lint-frontend.sh
.cursor/agents/: code-reviewer.md  reviewer.md
.cursor/commands/: check.md  release.md  review.md
.cursor/plans/: portrait-upscale-integration.md
.github/: RELEASE_TEMPLATE.md  copilot-instructions.md  release_body_template.md
.github/homebrew/: bing-wallpaper-now.rb.template
.github/workflows/: ci-local.yml  ci.yml  release.yml
docs/: MACOS_INSTALL.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  VERSION_MANAGEMENT.md  github-actions-macos-signing.md  v0.3.0-planning.md  v0.3.0-planning.zh.md
docs/prd/: 0.2.0.md  TEMPLATE.md
examples/: bing-wallpaper-response.json
scripts/: README.md  check-all-platforms.sh  check-commit.ps1  check-commit.sh  check-linux.sh  check-quality.sh  generate-icons.mjs  manage-version.sh  monitor-ci.sh  pre-commit-check.sh  precheck.sh  run-bash.mjs  validate-changelog.sh  version-maven.sh  version.ps1  version.sh
scripts/lib/: git.sh  project.sh  ui.sh  validators.sh  version.sh
src/: App.css  App.module.css  App.test.tsx  App.tsx  main.tsx  theme.css
src-tauri/: Cargo.toml  deny.toml  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_update.rs  bing_api.rs  download_manager.rs  index_manager.rs  lib.rs  linux_wallpaper.rs  macos_app.rs  main.rs  models.rs  notification.rs  runtime_state.rs  settings_store.rs  storage.rs  transfer.rs  tray.rs  update_cycle.rs  utils.rs  version_check.rs  wallpaper_manager.rs
src-tauri/src/commands/: mkt.rs  mod.rs  settings.rs  storage.rs  wallpaper.rs  window.rs
src-tauri/src/models/: bing.rs  index.rs  mod.rs  runtime.rs  settings.rs  wallpaper.rs
src/components/: About.module.css  About.test.tsx  About.tsx  AppErrorBoundary.module.css  AppErrorBoundary.test.tsx  AppErrorBoundary.tsx  SegmentedControl.module.css  SegmentedControl.tsx  Settings.module.css  Settings.test.tsx  Settings.tsx  UpdateDialog.module.css  UpdateDialog.test.tsx  UpdateDialog.tsx  WallpaperCard.module.css  WallpaperCard.test.tsx  WallpaperCard.tsx  WallpaperGrid.module.css  WallpaperGrid.test.tsx  WallpaperGrid.tsx
src/config/: icons.ts  layout.test.ts  layout.ts  taglines.test.ts  taglines.ts  ui.ts
src/contexts/: ThemeContext.test.tsx  ThemeContext.tsx
src/hooks/: useBingWallpapers.test.ts  useBingWallpapers.ts  useDynamicTagline.test.ts  useDynamicTagline.ts  useLiquidGlass.ts  useScreenOrientations.test.ts  useScreenOrientations.ts  useSettings.test.ts  useSettings.ts  useTrayEvents.test.ts  useTrayEvents.ts  useUpdateCheck.test.tsx  useUpdateCheck.ts  useVersionCheck.ts
src/i18n/: I18nContext.test.tsx  I18nContext.tsx  translations.ts
(+36 files in other folders)
